export interface Box {
    height: number;
    width: number;
    x: number;
    y: number;
}