import { Point } from "./DrawingShape";
import { IMoveable } from "./IMoveable";

export class LineMovement implements IMoveable {

    updateMovement(drag: Point): void {
        throw new Error("Method not implemented.");
    }


}