
export class PositionIndicator {
    public visible = false;
    public top = '50px';
    public left = '50px';
    public position_text = "";
}